# block-chain-back

./: .gitignore  main.py  pyproject.toml
backend/app/: blockchain.py  config.py  crud.py  database.py  deployment_info.json  ipfs.py  main.py  models.py  schemas.py
backend/app/routers/: comments.py  papers.py  users.py
contracts/: CommentChain.sol  PaperChain.sol
scripts/: deploy_contracts.py
